# repo-graph

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml  server.json
demo/: setup-demo.sh
dev-notes/: 0.3.0-decisions.md
dev-notes/0.4.11-sweep/: analysis.txt  analyze.py  drill.py  post-patch-report.md  report.md  repos.txt  results.jsonl  results.post-patch-a.jsonl  results.pre-patch.jsonl  run_one.py  sweep.py
examples/: README.md
examples/fastapi/: edges.json  nodes.json  state.md
examples/fastapi/flows/: delete__heroes_hero_id.yaml  get__authors.yaml  get__data.yaml  get__docs.yaml  get__fastapi.yaml  get__heroes.yaml  get__image_stream-no-annotation.yaml  get__image_stream-no-async-yield-from.yaml  get__image_stream-no-async.yaml  get__image_stream.yaml  get__info.yaml  get__item_id.yaml  get__items-header_item_id.yaml  get__items.yaml  get__items_id.yaml  get__items_item_id.yaml  get__items_item_id_name.yaml  get__items_item_id_public.yaml  get__items_stream-no-annotation.yaml  get__keyword-weights.yaml  get__legacy.yaml  get__me.yaml  get__predict.yaml  get__status.yaml  get__story_stream-bytes.yaml  get__story_stream-no-annotation-bytes.yaml  get__story_stream-no-annotation.yaml  get__story_stream-no-async-bytes.yaml  get__story_stream-no-async-no-annotation-bytes.yaml  get__story_stream-no-async.yaml  get__story_stream.yaml  get__teleport.yaml  get__unicorns_name.yaml  get__users.yaml  (+25 more)
examples/gin/: edges.json
examples/hono/: nodes.json
repo_graph/: analyzer.py  config.py  discovery.py  generator.py  graph.py  init.py  server.py  test_edges.py
repo_graph/analyzers/: __init__.py  angular.py  base.py  c_cpp.py  cli.py  clojure.py  csharp.py  dart.py  data_sources.py  elixir.py  go.py  grpc.py  java.py  php.py  python_lang.py  queues.py  react.py  ruby.py  rust.py  scala.py  scss.py  solidity.py  swift.py  terraform.py  typescript.py  vue.py
rust/: .gitignore  CLAUDE.md  Cargo.toml
rust/activation/: Cargo.toml
rust/activation/src/: lib.rs
rust/code-domain/: Cargo.toml
rust/code-domain/src/: lib.rs
rust/core/: Cargo.toml
rust/core/src/: lib.rs
rust/dev-notes/glia-memory/: MEMORY.md  feedback_02_not_a_ceiling.md  feedback_bidirectional_file_anchors.md  feedback_config_adds_never_replaces.md  feedback_consistent_language_support.md  feedback_detect_prefilter_tightness.md  feedback_domain_assumptions.md  feedback_external_repo_validation.md  feedback_facts_over_polish.md  feedback_flow_key_matching.md  feedback_monorepo_layouts.md  feedback_no_invented_process.md  feedback_no_legacy.md  feedback_push_back_on_sequence.md  feedback_python_find_packages_monorepo.md  feedback_python_never_new_format.md  feedback_relative_paths_for_skips.md  feedback_research_timing.md  feedback_text_projection_priority.md  feedback_trust_instructions.md  feedback_walk_through_before_release.md  feedback_write_surface_over_bridge.md  feedback_writing_voice.md  project_020_known_gaps.md  project_020_release_scope.md  project_030_roadmap.md  project_040_stack_resolvers_backlog.md  project_040_vision.md  project_0410_sequence.md  project_0410b_complete.md  project_0410c_complete.md  project_0410d_regression.md  project_0411_patches.md  project_0411_sweep.md  project_0411_sweep_findings.md  project_0411a_complete.md  project_0411a_scope.md  project_0411a_smoke_10repos.md  project_044_http_extractor_design.md  project_044a_complete.md  (+43 more)
rust/graph/: Cargo.toml
rust/graph/src/: lib.rs
rust/graph/tests/: go_smoke_graph.rs  http_stack_smoke.rs  py_smoke_graph.rs  stack_resolvers.rs  ts_smoke_graph.rs
rust/parser-python/: Cargo.toml
rust/parser-python/src/: lib.rs
rust/parser-python/tests/: py_smoke_fixture.rs
rust/parsers/code/angular/: Cargo.toml
rust/parsers/code/angular/src/: lib.rs
rust/parsers/code/c_cpp/: Cargo.toml
rust/parsers/code/c_cpp/src/: lib.rs
rust/parsers/code/clojure/: Cargo.toml
rust/parsers/code/clojure/src/: lib.rs
rust/parsers/code/csharp/: Cargo.toml
rust/parsers/code/csharp/src/: lib.rs
rust/parsers/code/dart/: Cargo.toml
rust/parsers/code/dart/src/: lib.rs
rust/parsers/code/elixir/: Cargo.toml
rust/parsers/code/elixir/src/: lib.rs
rust/parsers/code/extractors/: Cargo.toml
rust/parsers/code/extractors/src/: angular.rs  cli.rs  data_sources.rs  eventbus.rs  graphql.rs  grpc.rs  lib.rs  queues.rs  react.rs  ts_routes.rs  vue.rs  websocket.rs
rust/parsers/code/go/: Cargo.toml
rust/parsers/code/go/src/: lib.rs
rust/parsers/code/java/: Cargo.toml
rust/parsers/code/java/src/: lib.rs
rust/parsers/code/php/: Cargo.toml
rust/parsers/code/php/src/: lib.rs
rust/parsers/code/python/: Cargo.toml
rust/parsers/code/python/src/: lib.rs
rust/parsers/code/python/tests/: py_smoke_fixture.rs
rust/parsers/code/react/: Cargo.toml
rust/parsers/code/react/src/: lib.rs
rust/parsers/code/ruby/: Cargo.toml
rust/parsers/code/ruby/src/: lib.rs
rust/parsers/code/rust/: Cargo.toml
rust/parsers/code/rust/src/: lib.rs
rust/parsers/code/scala/: Cargo.toml
rust/parsers/code/scala/src/: lib.rs
rust/parsers/code/solidity/: Cargo.toml
rust/parsers/code/solidity/src/: lib.rs
rust/parsers/code/swift/: Cargo.toml
rust/parsers/code/swift/src/: lib.rs
rust/parsers/code/terraform/: Cargo.toml
rust/parsers/code/terraform/src/: lib.rs
rust/parsers/code/typescript/: Cargo.toml
rust/parsers/code/typescript/src/: lib.rs
rust/parsers/code/vue/: Cargo.toml
rust/parsers/code/vue/src/: lib.rs
rust/projection-text/: Cargo.toml
rust/projection-text/src/: lib.rs
rust/projection-text/tests/: render_backend.rs
rust/py/: Cargo.toml  README.md  pyproject.toml
rust/py/src/: lib.rs
rust/scratch/: Cargo.toml
rust/scratch/src/: main.rs
rust/store/: Cargo.toml
rust/store/src/: lib.rs
rust/store/tests/: quokka_dump.rs  roundtrip.rs  sharded.rs
skills/repo-graph-flow/: SKILL.md
skills/repo-graph-impact/: SKILL.md
skills/repo-graph-init/: SKILL.md
skills/repo-graph-trace/: SKILL.md
skills/repo-graph-visualise/: SKILL.md
tests/: conftest.py  test_py_smoke.py
(+61 files in other folders)
