[workspace]
resolver = "3"
members = [
    "scratch",
    "core",
    "code-domain",
    "parsers/code/python",
    "parsers/code/go",
    "parsers/code/typescript",
    "graph",
    "store",
    "projection-text",
    "activation",
    "parsers/code/rust",
    "parsers/code/java",
    "parsers/code/csharp",
    "parsers/code/ruby",
    "parsers/code/php",
    "parsers/code/swift",
    "parsers/code/c_cpp",
    "parsers/code/scala",
    "parsers/code/clojure",
    "parsers/code/dart",
    "parsers/code/elixir",
    "parsers/code/solidity",
    "parsers/code/terraform",
    "parsers/code/react",
    "parsers/code/angular",
    "parsers/code/vue",
    "parsers/code/extractors",
]
