[package]
name = "repo-graph-core"
version = "0.4.1"
edition = "2024"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
rkyv = { version = "0.8", features = ["bytecheck"] }
thiserror = "2"
twox-hash = { version = "2", default-features = false, features = ["xxhash64"] }

[dev-dependencies]
serde_json = "1"
