[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "repo-graph-py"
version = "0.4.12"
description = "Native Rust engine for mcp-repo-graph — parses, builds, and stores code graphs."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "James Chahwan"},
]
keywords = ["mcp", "llm", "codebase", "graph", "rust", "pyo3"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/James-Chahwan/repo-graph"
Repository = "https://github.com/James-Chahwan/repo-graph"
Issues = "https://github.com/James-Chahwan/repo-graph/issues"

[tool.maturin]
module-name = "repo_graph_py"
features = ["pyo3/extension-module"]
