[package]
name = "repo-graph-store"
version = "0.4.5"
edition = "2024"
publish = false

[dependencies]
repo-graph-core = { path = "../core" }
repo-graph-code-domain = { path = "../code-domain" }
repo-graph-graph = { path = "../graph" }
rkyv = { version = "0.8", features = ["bytecheck"] }
memmap2 = "0.9"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
twox-hash = { version = "2", default-features = false, features = ["xxhash64"] }

[dev-dependencies]
tempfile = "3"
repo-graph-parser-go = { path = "../parsers/code/go" }
