[package]
name = "repo-graph-parser-dart"
version = "0.4.9"
edition = "2024"
publish = false

[dependencies]
repo-graph-core = { path = "../../../core" }
repo-graph-code-domain = { path = "../../../code-domain" }
tree-sitter = "0.26"
tree-sitter-dart = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
