[package]
name = "repo-graph-code-extractors"
version = "0.4.9"
edition = "2024"
publish = false

[dependencies]
repo-graph-core = { path = "../../../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
repo-graph-code-domain = { path = "../../../code-domain" }
